loopwhile.LoopWhile.scala.error
Compilation error:
LoopWhile:2: error: value and is not a member of Boolean
while (estFaceMur()==false and i<10){
                           ^