loopwhile.LoopWhile.scala.code
var i: Int=0
while (estFaceMur()==false and i<10){
  avance()

  i=i+1
  
}